# dfs

./: CMakeLists.txt  DOCS.md  README.md  gen_protos.sh  hook.c
bot/: CMakeLists.txt
bot/protocol/: CMakeLists.txt
bot/src/: bot.cc  game.cc  injector.cc  map.cc  messages.cc  pathfinding.cc  proxy.cc  simple-farming-bot.cc  utils.cc
bot/tests/: CMakeLists.txt
bot/tests/data/: worldgraph.json
bot/tests/data/maps/: map_189793795.json
bot/tests/src/: map_change.cc  pathfinding.cc  random.cc
data/: README.md  map-coordinates.json
include/: bot-state.hh  bot.hh  game.hh  injector.hh  map.hh  messages.hh  network.hh  simple-farming-bot.hh  utils.hh
proto/connection/: login_message.proto
proto/game/: account.proto  achievement.proto  admin_console.proto  alliance_conquest.proto  alliance_information.proto  alliance_member.proto  alliance_rank.proto  alliance_recruitment.proto  alteration.proto  anomaly.proto  appearance.proto  area.proto  arena.proto  atlas.proto  bak.proto  basic.proto  bid_activity.proto  breach.proto  challenge.proto  character.proto  character_management.proto  chat.proto  choice.proto  client_verification.proto  common.proto  connection.proto  contact.proto  context.proto  cosmetic.proto  debt.proto  debug.proto  dialog.proto  document.proto  element.proto  emote.proto  exchange.proto  fight.proto  fight_preparation.proto  finish_move.proto  game_action.proto  (+40 more)
proto/game/google/protobuf/: any.proto
src/: main.cc
